@@ -7,6 +7,8 @@
 * Update - Requires at least WooCommerce 10.0.
 * Dev - Revised block script dependencies.
 * Dev - Revised the join and leave shortcode processing logic.
+* Dev - Added the groups_join_submit_max_time_delta filter.
+* Dev - Added the groups_leave_submit_max_time_delta filter.
 
 2025-09-08 - version 3.7.0
 * Update - WordPress 6.8 compatible.
